<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<name>OpenHospital-gui</name>
	<url>www.open-hospital.org</url>
	<organization>
		<name>Informatici Senza Frontiere</name>
		<url>www.informaticisenzafrontiere.org</url>
	</organization>

	<groupId>org.isf</groupId>
	<artifactId>OH-gui</artifactId>
	<packaging>jar</packaging>
	<version>1.13.0-SNAPSHOT</version>

	<properties>
		<oh.version>1.13.0-SNAPSHOT</oh.version>
		<java.version>11</java.version>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<spring.framework.version>5.3.29</spring.framework.version>
		<spring.boot.version>2.7.15</spring.boot.version>
		<license.maven.plugin.version>4.2</license.maven.plugin.version>
	</properties>

	<build>
		<plugins>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.11.0</version>
				<configuration>
					<release>${java.version}</release>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>3.1.2</version>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-resources-plugin</artifactId>
				<version>3.3.1</version>
				<executions>
					<execution>
						<id>add-test-resource</id>
						<phase>generate-test-sources</phase>
						<goals>
							<goal>testResources</goal>
						</goals>
						<configuration>
							<resources>
								<resource>
									<directory>bundle</directory>
								</resource>
							</resources>
						</configuration>
					</execution>
					<execution>
						<id>copy-resources</id>
						<phase>validate</phase>
						<goals>
							<goal>copy-resources</goal>
						</goals>
						<configuration>
							<outputDirectory>${project.basedir}/target/OpenHospital20/rsc</outputDirectory>
							<resources>
								<resource>
									<directory>src/main/resources</directory>
									<directory>rsc</directory>
								</resource>
							</resources>
						</configuration>
					</execution>
					<execution>
						<id>copy-lib</id>
						<phase>validate</phase>
						<goals>
							<goal>copy-resources</goal>
						</goals>
						<configuration>
							<outputDirectory>${project.basedir}/target/OpenHospital20/lib</outputDirectory>
							<resources>
								<resource>
									<directory>lib</directory>
								</resource>
							</resources>
						</configuration>
					</execution>
					<execution>
						<id>copy-native-lib</id>
						<phase>validate</phase>
						<goals>
							<goal>copy-resources</goal>
						</goals>
						<configuration>
							<outputDirectory>${project.basedir}/target/OpenHospital20/lib/native</outputDirectory>
							<resources>
								<resource>
									<directory>lib/native</directory>
								</resource>
								<resource>
									<directory>../openhospital-core/lib/native</directory>
								</resource>
							</resources>
						</configuration>
					</execution>
					<execution>
						<id>copy-bundle</id>
						<phase>validate</phase>
						<goals>
							<goal>copy-resources</goal>
						</goals>
						<configuration>
							<outputDirectory>${project.basedir}/target/OpenHospital20/bundle</outputDirectory>
							<resources>
								<resource>
									<directory>bundle</directory>
								</resource>
							</resources>
						</configuration>
					</execution>
					<execution>
						<id>copy-report</id>
						<phase>validate</phase>
						<goals>
							<goal>copy-resources</goal>
						</goals>
						<configuration>
							<outputDirectory>${project.basedir}/target/OpenHospital20/rpt_base</outputDirectory>
							<resources>
								<resource>
									<directory>rpt_base</directory>
								</resource>
							</resources>
						</configuration>
					</execution>
					<execution>
						<id>copy-report_extra</id>
						<phase>validate</phase>
						<goals>
							<goal>copy-resources</goal>
						</goals>
						<configuration>
							<outputDirectory>${project.basedir}/target/OpenHospital20/rpt_extra</outputDirectory>
							<resources>
								<resource>
									<directory>rpt_extra</directory>
								</resource>
							</resources>
						</configuration>
					</execution>
					<execution>
						<id>copy-report-stat</id>
						<phase>validate</phase>
						<goals>
							<goal>copy-resources</goal>
						</goals>
						<configuration>
							<outputDirectory>${project.basedir}/target/OpenHospital20/rpt_stat</outputDirectory>
							<resources>
								<resource>
									<directory>rpt_stat</directory>
								</resource>
							</resources>
						</configuration>
					</execution>
					<execution>
						<id>copy-script</id>
						<phase>validate</phase>
						<goals>
							<goal>copy-resources</goal>
						</goals>
						<configuration>
							<outputDirectory>${project.basedir}/target/OpenHospital20</outputDirectory>
							<resources>
								<resource>
									<directory>${project.basedir}</directory>
									<include>oh.*</include>
									<include>README.md</include>
								</resource>
								<resource>
									<directory>../openhospital-core</directory>
									<include>SetupGSM.cmd</include>
									<include>SetupGSM.sh</include>
								</resource>
							</resources>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-dependency-plugin</artifactId>
				<version>3.6.0</version>
				<executions>
					<execution>
						<id>copy-dependencies</id>
						<phase>prepare-package</phase>
						<goals>
							<goal>copy-dependencies</goal>
						</goals>
						<configuration>
							<outputDirectory>${project.build.directory}/OpenHospital20/lib</outputDirectory>
							<overWriteReleases>false</overWriteReleases>
							<overWriteSnapshots>false</overWriteSnapshots>
							<overWriteIfNewer>true</overWriteIfNewer>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<version>3.3.0</version>
				<configuration>
					<archive>
						<manifest>
							<addClasspath>true</addClasspath>
							<classpathPrefix>lib/</classpathPrefix>
							<mainClass>org.isf.menu.gui.Menu</mainClass>
						</manifest>
						<manifestEntries>
							<Class-Path>.</Class-Path>
						</manifestEntries>
					</archive>
					<finalName>OpenHospital20/bin/OH-gui</finalName>
				</configuration>
			</plugin>
			<plugin>
				<groupId>com.mycila</groupId>
				<artifactId>license-maven-plugin</artifactId>
				<version>${license.maven.plugin.version}</version>
				<configuration>
					<!-- <header>.license-header/license-header.txt</header> -->
					<licenseSets>
						<licenseSet>
							<header>.license-header/license-header.txt</header>
							<excludes>
								<exclude>./license-header/**</exclude>
								<exclude>./ide-settings/eclipse/**</exclude>
								<exclude>./ide-settings/idea/**</exclude>
								<exclude>.springBeans</exclude>
								<exclude>**/README</exclude>
								<exclude>doc/**/*.txt</exclude>
								<exclude>lib/**</exclude>
								<exclude>rpt_base/**</exclude>
								<exclude>rpt_extra/**</exclude>
								<exclude>rpt_stat/**</exclude>
								<exclude>rsc/**</exclude>
								<exclude>src/test/resources/**</exclude>
								<exclude>src/main/resources/**</exclude>
								<exclude>**/*.properties</exclude>
								<exclude>**/*.xml</exclude>
								<exclude>**/*.yml</exclude>
								<exclude>**/*.jfd</exclude>
							</excludes>
						</licenseSet>
					</licenseSets>
					<properties>
						<owner>Informatici Senza Frontiere</owner>
						<email>info@informaticisenzafrontiere.org</email>
						<project.inceptionYear>2006</project.inceptionYear>
						<project.name>Open Hospital</project.name>
						<project.url>www.open-hospital.org</project.url>
						<project.description>Open Hospital is a free and open source software for healthcare data management.</project.description>
					</properties>
				</configuration>
				<dependencies>
					<dependency>
						<groupId>com.mycila</groupId>
						<artifactId>license-maven-plugin-git</artifactId>
						<version>${license.maven.plugin.version}</version>
					</dependency>
				</dependencies>
			</plugin>
		</plugins>
	</build>

	<dependencies>
		<dependency>
			<groupId>org.isf</groupId>
			<artifactId>OH-core</artifactId>
			<version>${oh.version}</version>
		</dependency>
		<dependency>
			<groupId>com.github.sarxos</groupId>
			<artifactId>webcam-capture</artifactId>
			<version>0.3.12</version>
		</dependency>
		<dependency>
			<groupId>com.toedter</groupId>
			<artifactId>jcalendar</artifactId>
			<version>1.4</version>
		</dependency>
		<dependency>
			<groupId>org.rxtx</groupId>
			<artifactId>rxtx</artifactId>
			<version>2.1.7</version>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<version>2.0.9</version>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-reload4j</artifactId>
			<version>2.0.9</version>
		</dependency>
		<dependency>
			<groupId>org.igniterealtime.smack</groupId>
			<artifactId>smack</artifactId>
			<version>3.2.1</version>
		</dependency>
		<dependency>
			<groupId>org.igniterealtime.smack</groupId>
			<artifactId>smackx</artifactId>
			<version>3.2.1</version>
		</dependency>
		<dependency>
			<groupId>org.imgscalr</groupId>
			<artifactId>imgscalr-lib</artifactId>
			<version>4.2</version>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-context</artifactId>
			<version>${spring.framework.version}</version>
		</dependency>
		<dependency>
			<groupId>com.jgoodies</groupId>
			<artifactId>jgoodies-common</artifactId>
			<version>1.8.1</version>
		</dependency>
		<dependency>
			<groupId>com.jgoodies</groupId>
			<artifactId>jgoodies-binding</artifactId>
			<version>2.13.0</version>
		</dependency>
		<dependency>
			<groupId>com.jgoodies</groupId>
			<artifactId>jgoodies-forms</artifactId>
			<version>1.9.0</version>
		</dependency>
		<dependency>
			<groupId>com.jgoodies</groupId>
			<artifactId>jgoodies-looks</artifactId>
			<version>2.7.0</version>
		</dependency>
		<dependency>
			<groupId>com.jgoodies</groupId>
			<artifactId>jgoodies-validation</artifactId>
			<version>2.5.1</version>
		</dependency>
		<dependency>
			<groupId>com.github.lgooddatepicker</groupId>
			<artifactId>LGoodDatePicker</artifactId>
			<version>11.2.1</version>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot</artifactId>
			<version>${spring.boot.version}</version>
		</dependency>
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-engine</artifactId>
			<version>5.10.0</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.assertj</groupId>
			<artifactId>assertj-core</artifactId>
			<version>3.24.2</version>
			<scope>test</scope>
		</dependency>
	</dependencies>
</project>
